--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,12 @@
     "builds": [
         {
             "src": "index.py",
-            "use": "@vercel/python"
+            "use": "@vercel/python",
+            "config": {
+                "includeFiles": [
+                    "data/**"
+                ]
+            }
         }
     ],
     "routes": [
